chapter-33/k8s/base/review-service/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: review-service
spec:
  hosts:
    - review-service
  http:
    - match:
        - headers:
            x-canary:
              exact: "true"
      route:
        - destination:
            host: review-service
            subset: canary
          weight: 100
    - route:
        - destination:
            host: review-service
            subset: stable
          weight: 100
